1999-09-28  Geoffrey Keating  <geoffk@cygnus.com>

	* scripttempl/elf.sc (.sdata): Include .gnu.linkonce.s.* sections
	in .sdata too.

1999-09-26  Nick Clifton  <nickc@cygnus.com>

	* scripttempl/elf.sc (.bss): Accept sections named .bss.*
	(.sbss): Accept sections names .sbss.*

1999-09-22  Nick Clifton  <nickc@cygnus.com>

	* Makefile.am: Add earm_epoc_pe.c build target. 

Sat Sep 18 07:57:10 1999  Jeffrey A Law  (law@cygnus.com)

	* emulparms/elf64hppa.sh (OTHER_READONLY_SYMBOLS): Remove ".stubs",
	they've been renamed to ".stub", which is handled automatically
	by elf.sc.

Fri Sep 17 11:00:33 1999  Jeffrey A Law  (law@cygnus.com)

	* emulparms/elf64hppa.sh (TEXT_START_SYMBOLS): Kill completely.
	(DATA_START_SYMBOLS): Kill __hp_load_map definition

Thu Sep 16 10:59:56 1999  Jeffrey A Law  (law@cygnus.com)

	* emultempl/elf32.em (gld${EMULATION_NAME}_open_dynamic_archive):
	Use the same filename extension for the bfd_elf_dt_needed_name call
	as we did for finding the library.

	* emulparms/elf64hppa.sh (DATA_START_SYMBOLS): Define.
	(OTHER_READWRITE_SECTIONS): No longer define __hp_load_map.

	* emulparms/elf64hppa.sh (TEXT_START_SYMBOLS): Define.

Wed Sep 15 02:47:43 1999  Jeffrey A Law  (law@cygnus.com)

	* emulparms/elf64hppa.sh (SHLIB_TEXT_START_ADDR): Define.
	(SHLIB_DATA_ADDR): Likewise.

	* emulparms/elf64hppa.sh (TEXT_DYNAMIC): Define.

	* emulparms/elf64hppa.h (OTHER_READWRITE_SECTIONS):  No longer combine
	the .plt, .dlt, .opd  into a single output section.  Provide values
	for __gp and __hp_load_map.

1999-09-14  Michael Meissner  <meissner@cygnus.com>

	* configure.in (Canonicalization of target names): Remove adding
	${CONFIG_SHELL} in front of $ac_config_sub, since autoconfig 2.14
	generates $ac_config_sub with a ${CONFIG_SHELL} already.
	* configure: Regenerate.

1999-09-14  Donn Terry  <donn@interix.com>

	* emultempl/pe.em (gld_${EMULATION_NAME}_after_open): allow for 
	terminating null.

1999-09-14  Nick Clifton  <nickc@cygnus.com>
